hphp/test/zend/good/Zend/tests/bug61273.php.expectf
Fatal error: Uncaught exception 'InvalidArgumentException' with message '__invoke() expects parameter 1 to be inout, but the call was not annotated with 'inout'' in %s/bug61273.php:8
Stack trace:
#0 %s/bug61273.php(8): call_user_func_array()
#1 (): main()
#2 {main}
